# Algorithm-and-Data-Structures

./: .gitignore  README.md
APSP/: Floyd_Warshall_Algo.py  Mortys_Lab.py
APSP/aves-barn-swallow-contact-network/: aves-barn-swallow-contact-network.edges
APSP/aves-wildbird-network-6/: aves-wildbird-network-6.edges
AdventOfCoding/Day1/: Problem1.py  Problem2.py
AdventOfCoding/Day10/: Problem1.py  Problem2.py  visualizing.txt
AdventOfCoding/Day11/: Problem1.py  Problem2.py
AdventOfCoding/Day2/: Problem1.py  Problem2.py
AdventOfCoding/Day3/: Problem1.py  Problem2.py
AdventOfCoding/Day4/: Problem1.py  Problem2.py
AdventOfCoding/Day5/: Problem1.py  Problem1_2.py  Problem2.py
Amortized_Analyze/: Hashlist.py  Queue_2Stacks.py  Union_Find.py  test_runtime.py
Basics/Graph/: BFS.py  (+10 more)
Network/: MaxFlow.py  MaxFlow2.py  Weihnachtsbäume.py
Randomised Algos/: Combinations.py  Random_Number_Getter.py
TuringMachines/: CoderunnerImpl.py
kattis/: Handkaes.py  Incognito.py  Juggling_Pattern.py  Quadrant Selection.py  Teacher Evaluation.py  The Easiest Problem Is This One.py  aah.py  adding_trouble.py  chess.py  prime path.py  unoreverse.py
leetcode/cpp/: CMakeLists.txt  ToDoProblem_List.md  main.cpp
leetcode/cpp/Week1_Problems/: BestTimeToBuyAndSellStockWithTransactionfee_714.cpp  FindTheStudentThatWillReplaceTheChalk_1894.cpp  JumpGame_55.cpp  LongestCommonPrefix_14.cpp  MaximumAreaofaPieceofCakeAfterHorizontalandVerticalCuts_1465.cpp  PartitionLabels_763.cpp  PrintWordsVertically_1324.cpp  SearchInRotatedSortedArray_33.cpp  ThreeSum.cpp  UniquePathes_62.cpp
(+295 files in other folders)
