cmake_minimum_required(VERSION 3.27)
project(cpp)

set(CMAKE_CXX_STANDARD 23)

add_executable(cpp main.cpp
        Week1_Problems/ThreeSum.cpp
        Week1_Problems/PrintWordsVertically_1324.cpp
        Week1_Problems/LongestCommonPrefix_14.cpp
        Week1_Problems/JumpGame_55.cpp
        Week1_Problems/SearchInRotatedSortedArray_33.cpp
        Week1_Problems/MaximumAreaofaPieceofCakeAfterHorizontalandVerticalCuts_1465.cpp
        Week1_Problems/UniquePathes_62.cpp
        Week1_Problems/FindTheStudentThatWillReplaceTheChalk_1894.cpp
)
